fix 1 cam not working on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -500,8 +500,44 @@ video {
 .top-0 {
   top: 0px;
 }
+.-top-5 {
+  top: -1.25rem;
+}
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+.bottom-5 {
+  bottom: 1.25rem;
+}
+.top-5 {
+  top: 1.25rem;
+}
+.-bottom-0 {
+  bottom: -0px;
+}
+.bottom-0 {
+  bottom: 0px;
+}
+.left-5 {
+  left: 1.25rem;
+}
+.bottom-\[10px\] {
+  bottom: 10px;
+}
+.left-\[10px\] {
+  left: 10px;
+}
+.left-\[30px\] {
+  left: 30px;
+}
+.right-\[30px\] {
+  right: 30px;
+}
 .z-10 {
   z-index: 10;
+}
+.z-20 {
+  z-index: 20;
 }
 .m-\[1\.38rem\] {
   margin: 1.38rem;
@@ -518,10 +554,6 @@ video {
   margin-top: 1.38rem;
   margin-bottom: 1.38rem;
 }
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
-}
 .-ml-\[140px\] {
   margin-left: -140px;
 }
@@ -530,6 +562,9 @@ video {
 }
 .-mr-\[300px\] {
   margin-right: -300px;
+}
+.mr-0 {
+  margin-right: 0px;
 }
 .mr-\[40px\] {
   margin-right: 40px;
@@ -548,9 +583,6 @@ video {
 }
 .mt-\[80px\] {
   margin-top: 80px;
-}
-.mr-0 {
-  margin-right: 0px;
 }
 .block {
   display: block;
@@ -575,16 +607,6 @@ video {
 }
 .h-\[93px\] {
   height: 93px;
-}
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-.h-\[91px\] {
-  height: 91px;
-}
-.h-\[50px\] {
-  height: 50px;
 }
 .h-full {
   height: 100%;
@@ -681,20 +703,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.p-\[60px\] {
-  padding: 60px;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
-.p-5 {
-  padding: 1.25rem;
-}
-.p-\[1rem\] {
-  padding: 1rem;
-}
-.p-\[\.5rem\] {
-  padding: .5rem;
-}
-.p-\[0\.5rem\] {
-  padding: 0.5rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .px-\[0\.81rem\] {
   padding-left: 0.81rem;
@@ -703,6 +718,10 @@ video {
 .px-\[18px\] {
   padding-left: 18px;
   padding-right: 18px;
+}
+.px-\[3rem\] {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .px-\[45px\] {
   padding-left: 45px;
@@ -715,10 +734,6 @@ video {
 .px-\[54px\] {
   padding-left: 54px;
   padding-right: 54px;
-}
-.px-\[60px\] {
-  padding-left: 60px;
-  padding-right: 60px;
 }
 .py-10 {
   padding-top: 2.5rem;
@@ -740,34 +755,6 @@ video {
   padding-top: 11px;
   padding-bottom: 11px;
 }
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.py-\[0\.5rem\] {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.px-\[1rem\] {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-.px-\[2rem\] {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.px-\[3rem\] {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -788,27 +775,6 @@ video {
 }
 .pt-\[30px\] {
   padding-top: 30px;
-}
-.pr-\[60px\] {
-  padding-right: 60px;
-}
-.pl-\[60px\] {
-  padding-left: 60px;
-}
-.pr-0 {
-  padding-right: 0px;
-}
-.pr-10 {
-  padding-right: 2.5rem;
-}
-.pr-\[0\.5rem\] {
-  padding-right: 0.5rem;
-}
-.pl-\[0\.5rem\] {
-  padding-left: 0.5rem;
-}
-.pl-\[1rem\] {
-  padding-left: 1rem;
 }
 .text-left {
   text-align: left;
